cluster/deploy-site.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: owlvey-site-local-deployment
  namespace: owlvey
spec:
  replicas: 1
  selector:
    matchLabels:
      key: owlvey-site-pod
  template:
    metadata:
      labels:
        key: owlvey-site-pod
    spec:
      containers:
      - name: owlvey-site
        image: owlveydevcommit/k8ssite:latest
        imagePullPolicy: Always
        ports:
            - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: owlvey-site-internal-deployment
  namespace: owlvey
spec:
  replicas: 1
  selector:
    matchLabels:
      key: owlvey-site-internal-pod
  template:
    metadata:
      labels:
        key: owlvey-site-internal-pod
    spec:
      containers:
      - name: owlvey-site
        image: owlveydevcommit/k8sisite:latest
        imagePullPolicy: Always
        ports:
            - containerPort: 80
