cluster/service-site.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-site
  namespace: owlvey
spec:  
  type: ClusterIP
  selector:
    key: owlvey-site-pod
  ports:
    - name: site
      protocol: TCP      
      port: 48100
      targetPort: 80
